--- a/_sass/classic/_widgets.scss
+++ b/_sass/classic/_widgets.scss
@@ -1,7 +1,7 @@
 // Formatting for the widgets. Note that widgets are small.
 .widget {
-	font-size: $small-small-font-size;
-	h1 { font-size: $small-font-size; font-weight: bold; }
+	font-size: $small-2-font-size;
+	h1 { font-size: $small-1-font-size; font-weight: bold; }
 	h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure { margin-bottom: 0; }
 }
 
