--- a/_sass/classic/_custom.scss
+++ b/_sass/classic/_custom.scss
@@ -22,7 +22,7 @@
 // A floating text box on the right hand side.
 .text-boxed-float-right {
 	float: right;
-	font-size: $small-font-size;
+	font-size: $small-1-font-size;
 	font-style: italic;
 	border: 1px solid lightgray;
 	margin: $vspacing-unit/2 0 $vspacing-unit/2 $hspacing-unit;
@@ -33,7 +33,7 @@
 // A floating text box on the left hand side
 .text-boxed-float-left {
 	float: left;
-	font-size: $small-font-size;
+	font-size: $small-1-font-size;
 	font-style: italic;
 	border: 1px solid lightgray;
 	margin: $vspacing-unit/2 $hspacing-unit $vspacing-unit/2 0;
@@ -117,10 +117,10 @@
 
 .cblock-description {
 	text-align: center;
-	font-size: $small-font-size;
+	font-size: $small-1-font-size;
 }
 
 .cblock-store {
 	text-align: center;
-	font-size: $small-font-size;
+	font-size: $small-1-font-size;
 }
